--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,97 +1,12 @@
-annotated-types==0.7.0
-anyio==4.7.0
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.0
+bcrypt==4.3.0
 blinker==1.9.0
-certifi==2023.7.22
-cffi==1.15.0
-charset-normalizer==3.2.0
-click==8.1.7
-contourpy==1.1.0
-cycler==0.11.0
-debugpy==1.6.0
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-exceptiongroup==1.2.2
-executing==0.8.3
-fastapi==0.115.6
-fastjsonschema==2.15.3
+click==8.1.8
 Flask==3.1.0
-fonttools==4.42.1
-h11==0.14.0
-idna==3.4
-ipykernel==6.13.1
-ipython==8.4.0
-ipython-genutils==0.2.0
+flask-cors==5.0.1
+Flask-JWT-Extended==4.7.1
 itsdangerous==2.2.0
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-jsonschema==4.6.0
-jupyter-client==7.3.4
-jupyter-core==4.10.0
-jupyterlab-pygments==0.2.2
-kiwisolver==1.4.5
-MarkupSafe==2.1.1
-matplotlib==3.7.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mysql-connector==2.2.9
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 mysql-connector-python==9.2.0
-nbclient==0.6.4
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numpy==1.22.4
-packaging==21.3
-panda==0.3.1
-pandas==1.4.2
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==10.0.0
-plotly==5.8.2
-prometheus-client==0.14.1
-prompt-toolkit==3.0.29
-psutil==5.9.1
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==2.10.3
-pydantic_core==2.27.1
-Pygments==2.12.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-pytz==2022.1
-pyzmq==23.1.0
-requests==2.31.0
-scikit-learn==1.1.1
-scipy==1.8.1
-Send2Trash==1.8.0
-six==1.16.0
-sklearn==0.0
-sniffio==1.3.1
-soupsieve==2.3.2.post1
-stack-data==0.2.0
-starlette==0.41.3
-tenacity==8.0.1
-terminado==0.15.0
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-tornado==6.1
-traitlets==5.2.2.post1
-typing_extensions==4.12.2
-urllib3==2.0.4
-wcwidth==0.2.5
-webencodings==0.5.1
+PyJWT==2.10.1
 Werkzeug==3.1.3
