--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
