--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,13 +1,30 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+attrs==25.3.0
 bcrypt==4.3.0
 blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
+dnspython==2.7.0
+dotenv==0.9.9
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
+frozenlist==1.6.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+multidict==6.4.3
 mysql-connector-python==9.2.0
-PyJWT==2.10.1
-Werkzeug==3.1.3
 openai==0.27.8
+propcache==0.3.1
+PyJWT==2.10.1
+python-dotenv==1.1.0
+requests==2.32.3
+tqdm==4.67.1
+urllib3==2.4.0
+Werkzeug==3.1.3
+yarl==1.20.0
