--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -20,8 +20,11 @@ MarkupSafe==3.0.2
 multidict==6.4.3
 mysql-connector-python==9.2.0
 openai==0.27.8
+packaging==25.0
+pillow==11.2.1
 propcache==0.3.1
 PyJWT==2.10.1
+pytesseract==0.3.13
 python-dotenv==1.1.0
 requests==2.32.3
 tqdm==4.67.1
